working on sequencer

--- a/src/Components/ResetButton.module.css
+++ b/src/Components/ResetButton.module.css
@@ -1,4 +1,4 @@
-.root {
+/* .root {
   display: flex;
   height: 60px;
   background: hsl(240, 5%, 22%);
@@ -17,4 +17,4 @@
   .root {
     width: 60px;
   }
-}
+} */
