--- a/src/Components/TimeSignature.module.css
+++ b/src/Components/TimeSignature.module.css
@@ -1,4 +1,4 @@
-.root {
+/* .root {
   display: flex;
   max-width: 70px;
   height: 60px;
@@ -26,4 +26,4 @@
   font-family: "Orbitron", sans-serif;
   -webkit-appearance: none;
   -moz-appearance: none;
-}
+} */
