--- a/src/Components/BoxRow.module.css
+++ b/src/Components/BoxRow.module.css
@@ -1,4 +1,4 @@
-.root {
+/* .root {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -26,4 +26,4 @@
 
 .checked:hover {
   background: #f2ffe2;
-}
+} */
