--- a/src/Components/Buttons.module.css
+++ b/src/Components/Buttons.module.css
@@ -1,4 +1,4 @@
-.root {
+/* .root {
   padding: 1em 0.5em;
   background: #28282c;
   border-radius: 4px;
@@ -16,4 +16,4 @@
   .root {
     display: grid;
   }
-}
+} */
