--- a/src/Components/PitchSelect.module.css
+++ b/src/Components/PitchSelect.module.css
@@ -1,4 +1,4 @@
-.root {
+/* .root {
   display: flex;
   background: hsl(240, 5%, 22%);
   border-radius: 4px;
@@ -29,4 +29,4 @@
   .root {
     display: none;
   }
-}
+} */
