--- a/src/Components/PlayButton.module.css
+++ b/src/Components/PlayButton.module.css
@@ -1,4 +1,4 @@
-.root {
+/* .root {
   display: flex;
   height: 60px;
   background: hsl(240, 5%, 22%);
@@ -16,4 +16,4 @@
   .root {
     width: 100%;
   }
-}
+} */
