--- a/src/Components/TapTempo.module.css
+++ b/src/Components/TapTempo.module.css
@@ -1,4 +1,4 @@
-.root {
+/* .root {
   display: flex;
   height: 60px;
   background: hsl(240, 5%, 22%);
@@ -14,10 +14,10 @@
   font-size: 20px;
   margin: auto;
   width: 60px;
-  /* Disables text selection on on span */
+
   user-select: none;
   -moz-user-select: none;
   -khtml-user-select: none;
   -webkit-user-select: none;
   -o-user-select: none;
-}
+} */
