--- a/src/Components/TempoDisplay.module.css
+++ b/src/Components/TempoDisplay.module.css
@@ -1,4 +1,4 @@
-.root {
+/* .root {
   display: flex;
   height: 60px;
   background: hsl(240, 5%, 22%);
@@ -13,7 +13,7 @@
   font-family: "Orbitron", sans-serif;
   font-size: 18px;
   width: 60px;
-  /* Disables text selection on on span */
+ 
   user-select: none;
   -moz-user-select: none;
   -khtml-user-select: none;
@@ -24,4 +24,4 @@
   .label {
     font-size: 22px;
   }
-}
+} */
