--- a/src/Components/Title.module.css
+++ b/src/Components/Title.module.css
@@ -1,4 +1,4 @@
-.root {
+/* .root {
   padding: 0.5em;
   background: #28282c;
   border-radius: 2px;
@@ -24,4 +24,4 @@
   .root {
     font-size: 40px;
   }
-}
+} */
